trying to fix width issue on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -24,3 +24,7 @@ p {
 .posts > li {
   font-size: 13pt;
 }
+
+.gif {
+  width: 100%;
+}
